# wl-mpris-idle-inhibit

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pre.sh
.github/workflows/: release.yml
src/: main.rs
