[package]
name = "sway-mpris-idle-inhibit"
version = "0.1.5"
edition = "2021"
description = "Inhibits idle on Wayland during media playback by an MPRIS2 player"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-protocols = { version = "0.30.0-beta.5", git = "https://github.com/Smithay/wayland-rs.git", features = ["client", "unstable"] }
wayland-client = { version = "0.30.0-beta.5", git = "https://github.com/Smithay/wayland-rs.git" }
mpris = { version = "2.0.0-rc2", git = "https://github.com/Mange/mpris-rs.git" }
